# override_macro-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
override_macro_tests/: Cargo.toml
override_macro_tests/src/: lib.rs  t01_override_for_struct.rs  t02_skip_trait_function.rs  t03_skip_implemented_method.rs  t04_override_for_trait.rs  t05_override_for_trait_impl.rs  t06_override_for_trait_where.rs  t07_use_mod_path_for_trait_conflict.rs  t08_use_mod_alias_for_trait_conflict.rs  t09_trait_method_conflict.rs  t10_async_method.rs
override_macro_tests/src/compile_errors/: e01_overridable_args.rs  e01_overridable_args.stderr  e02_overridable_on_other_item.rs  e02_overridable_on_other_item.stderr  e03_override_with_args.rs  e03_override_with_args.stderr  e04_override_with_on_other_item.rs  e04_override_with_on_other_item.stderr  e05_override_with_method_conflict.rs  e05_override_with_method_conflict.stderr  e06_override_with_trait_conflict.rs  e06_override_with_trait_conflict.stderr  e07_override_with_same_trait.rs  e07_override_with_same_trait.stderr
src/: lib.rs  logic.rs  syn_data_acc.rs  syn_dax.rs
